feat(jvm): 补充内存泄漏实战演练示例和监控指导
- 新增内存泄漏模拟代码，展示静态集合导致的内存持续增长
- 增加详细运行指令和环境配置（如限制堆大小）
- 提供通过 jconsole 等工具监控 JVM 内存使用方法
- 增加 GC 日志典型内存泄漏表现示例及曲线图示
- 归纳内存泄漏与内存溢出的区别及常见面试题
- 演示OOM发生时的日志输出与解决方案建议
- 代码中添加等待及打印机制，便于实时观察内存状态